--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: x86_64 and i686 release builds
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
@@ -12,47 +12,50 @@ jobs:
         config:
         - {
             name: "x86_64 posix sjlj",
-            artifact: "x86_64-11.2.0-release-posix-sjlj-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-11.2.0 --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=sjlj --arch=x86_64 --bin-compress --enable-languages=c,c++"
+            artifact: "x86_64-${{ github.ref }}-release-posix-sjlj-rt_v9-rev0.7z",
+            build_cmd: "--mode=gcc-${{ github.ref }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=sjlj --arch=x86_64 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "x86_64 posix seh",
-            artifact: "x86_64-11.2.0-release-posix-seh-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-11.2.0 --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=seh --arch=x86_64 --bin-compress --enable-languages=c,c++"
+            artifact: "x86_64-${{ github.ref }}-release-posix-seh-rt_v9-rev0.7z",
+            build_cmd: "--mode=gcc-${{ github.ref }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=seh --arch=x86_64 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "x86_64 win32 sjlj",
-            artifact: "x86_64-11.2.0-release-win32-sjlj-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-11.2.0 --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=sjlj --arch=x86_64 --bin-compress --enable-languages=c,c++"
+            artifact: "x86_64-${{ github.ref }}-release-win32-sjlj-rt_v9-rev0.7z",
+            build_cmd: "--mode=gcc-${{ github.ref }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=sjlj --arch=x86_64 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "x86_64 win32 seh",
-            artifact: "x86_64-11.2.0-release-win32-seh-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-11.2.0 --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=seh --arch=x86_64 --bin-compress --enable-languages=c,c++"
+            artifact: "x86_64-${{ github.ref }}-release-win32-seh-rt_v9-rev0.7z",
+            build_cmd: "--mode=gcc-${{ github.ref }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=seh --arch=x86_64 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "i686 posix sjlj",
-            artifact: "i686-11.2.0-release-posix-sjlj-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-11.2.0 --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=sjlj --arch=i686 --bin-compress --enable-languages=c,c++"
+            artifact: "i686-${{ github.ref }}-release-posix-sjlj-rt_v9-rev0.7z",
+            build_cmd: "--mode=gcc-${{ github.ref }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=sjlj --arch=i686 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "i686 posix dwarf",
-            artifact: "i686-11.2.0-release-posix-dwarf-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-11.2.0 --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=dwarf --arch=i686 --bin-compress --enable-languages=c,c++"
+            artifact: "i686-${{ github.ref }}-release-posix-dwarf-rt_v9-rev0.7z",
+            build_cmd: "--mode=gcc-${{ github.ref }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=dwarf --arch=i686 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "i686 win32 sjlj",
-            artifact: "i686-11.2.0-release-win32-sjlj-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-11.2.0 --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=sjlj --arch=i686 --bin-compress --enable-languages=c,c++"
+            artifact: "i686-${{ github.ref }}-release-win32-sjlj-rt_v9-rev0.7z",
+            build_cmd: "--mode=gcc-${{ github.ref }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=sjlj --arch=i686 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "i686 win32 dwarf",
-            artifact: "i686-11.2.0-release-win32-dwarf-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-11.2.0 --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=dwarf --arch=i686 --bin-compress --enable-languages=c,c++"
+            artifact: "i686-${{ github.ref }}-release-win32-dwarf-rt_v9-rev0.7z",
+            build_cmd: "--mode=gcc-${{ github.ref }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=dwarf --arch=i686 --bin-compress --enable-languages=c,c++"
           }
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        repository: 'niXman/mingw-builds'
+        ref: 'develop'
 
     - uses: msys2/setup-msys2@v2
       with:
@@ -104,35 +107,35 @@ jobs:
         config:
         - {
             name: "x86_64 posix sjlj",
-            artifact: "x86_64-11.2.0-release-posix-sjlj-rt_v9-rev0.7z"
+            artifact: "x86_64-${{ github.ref }}-release-posix-sjlj-rt_v9-rev0.7z"
           }
         - {
             name: "x86_64 posix seh",
-            artifact: "x86_64-11.2.0-release-posix-seh-rt_v9-rev0.7z"
+            artifact: "x86_64-${{ github.ref }}-release-posix-seh-rt_v9-rev0.7z"
           }
         - {
             name: "x86_64 win32 sjlj",
-            artifact: "x86_64-11.2.0-release-win32-sjlj-rt_v9-rev0.7z"
+            artifact: "x86_64-${{ github.ref }}-release-win32-sjlj-rt_v9-rev0.7z"
           }
         - {
             name: "x86_64 win32 seh",
-            artifact: "x86_64-11.2.0-release-win32-seh-rt_v9-rev0.7z"
+            artifact: "x86_64-${{ github.ref }}-release-win32-seh-rt_v9-rev0.7z"
           }
         - {
             name: "i686 posix sjlj",
-            artifact: "i686-11.2.0-release-posix-sjlj-rt_v9-rev0.7z"
+            artifact: "i686-${{ github.ref }}-release-posix-sjlj-rt_v9-rev0.7z"
           }
         - {
             name: "i686 posix dwarf",
-            artifact: "i686-11.2.0-release-posix-dwarf-rt_v9-rev0.7z"
+            artifact: "i686-${{ github.ref }}-release-posix-dwarf-rt_v9-rev0.7z"
           }
         - {
             name: "i686 win32 sjlj",
-            artifact: "i686-11.2.0-release-win32-sjlj-rt_v9-rev0.7z"
+            artifact: "i686-${{ github.ref }}-release-win32-sjlj-rt_v9-rev0.7z"
           }
         - {
             name: "i686 win32 dwarf",
-            artifact: "i686-11.2.0-release-win32-dwarf-rt_v9-rev0.7z"
+            artifact: "i686-${{ github.ref }}-release-win32-dwarf-rt_v9-rev0.7z"
           }
 
     needs: release
