--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   build:
+    if: contains(github.ref, 'tags/')
     name: ${{ matrix.config.name }}
     runs-on: windows-latest
     strategy:
@@ -72,7 +73,7 @@ jobs:
         name: ${{ matrix.config.artifact }}
 
   release:
-    if: contains(github.ref, 'tags/v')
+    if: contains(github.ref, 'tags/')
     runs-on: ubuntu-latest
     needs: build
 
@@ -98,7 +99,7 @@ jobs:
         name: upload_url
 
   publish:
-    if: contains(github.ref, 'tags/v')
+    if: contains(github.ref, 'tags/')
     name: ${{ matrix.config.name }}
     runs-on: ubuntu-latest
     strategy:
