--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,20 @@ name: x86_64 and i686 release builds
 on: [push]
 
 jobs:
-  build:
+  split-tag:
+    runs-on: ubuntu-latest
     if: contains(github.ref, 'tags/')
+    outputs:
+      gcc-version: ${{ steps.get-gcc-version.outputs.version }}
+      mingw-rev: ${{ steps.get-mingw-revision.outputs.rev }}
+    steps:
+      - id: get-gcc-version
+        run: echo "::set-output name=version::$(echo ${{ github.ref_name }} | cut -d- -f1 | cut -c2-)"
+      - id: get-mingw-revision
+        run: echo "::set-output name=rev::$(echo ${{ github.ref_name }} | cut -d- -f2 | cut -c4-)"
+
+  build:
+    needs: split-tag
     name: ${{ matrix.config.name }}
     runs-on: windows-latest
     strategy:
@@ -13,43 +25,43 @@ jobs:
         config:
         - {
             name: "x86_64 posix sjlj",
-            artifact: "x86_64-${{ github.ref_name }}-release-posix-sjlj-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-${{ github.ref_name }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=sjlj --arch=x86_64 --bin-compress --enable-languages=c,c++"
+            artifact: "x86_64-${{ needs.split-tag.outputs.gcc-version }}-release-posix-sjlj-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z",
+            build_cmd: "--mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=v9 --threads=posix --exceptions=sjlj --arch=x86_64 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "x86_64 posix seh",
-            artifact: "x86_64-${{ github.ref_name }}-release-posix-seh-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-${{ github.ref_name }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=seh --arch=x86_64 --bin-compress --enable-languages=c,c++"
+            artifact: "x86_64-${{ needs.split-tag.outputs.gcc-version }}-release-posix-seh-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z",
+            build_cmd: "--mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=v9 --threads=posix --exceptions=seh --arch=x86_64 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "x86_64 win32 sjlj",
-            artifact: "x86_64-${{ github.ref_name }}-release-win32-sjlj-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-${{ github.ref_name }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=sjlj --arch=x86_64 --bin-compress --enable-languages=c,c++"
+            artifact: "x86_64-${{ needs.split-tag.outputs.gcc-version }}-release-win32-sjlj-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z",
+            build_cmd: "--mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=v9 --threads=win32 --exceptions=sjlj --arch=x86_64 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "x86_64 win32 seh",
-            artifact: "x86_64-${{ github.ref_name }}-release-win32-seh-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-${{ github.ref_name }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=seh --arch=x86_64 --bin-compress --enable-languages=c,c++"
+            artifact: "x86_64-${{ needs.split-tag.outputs.gcc-version }}-release-win32-seh-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z",
+            build_cmd: "--mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=v9 --threads=win32 --exceptions=seh --arch=x86_64 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "i686 posix sjlj",
-            artifact: "i686-${{ github.ref_name }}-release-posix-sjlj-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-${{ github.ref_name }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=sjlj --arch=i686 --bin-compress --enable-languages=c,c++"
+            artifact: "i686-${{ needs.split-tag.outputs.gcc-version }}-release-posix-sjlj-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z",
+            build_cmd: "--mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=v9 --threads=posix --exceptions=sjlj --arch=i686 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "i686 posix dwarf",
-            artifact: "i686-${{ github.ref_name }}-release-posix-dwarf-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-${{ github.ref_name }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=posix --exceptions=dwarf --arch=i686 --bin-compress --enable-languages=c,c++"
+            artifact: "i686-${{ needs.split-tag.outputs.gcc-version }}-release-posix-dwarf-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z",
+            build_cmd: "--mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=v9 --threads=posix --exceptions=dwarf --arch=i686 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "i686 win32 sjlj",
-            artifact: "i686-${{ github.ref_name }}-release-win32-sjlj-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-${{ github.ref_name }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=sjlj --arch=i686 --bin-compress --enable-languages=c,c++"
+            artifact: "i686-${{ needs.split-tag.outputs.gcc-version }}-release-win32-sjlj-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z",
+            build_cmd: "--mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=v9 --threads=win32 --exceptions=sjlj --arch=i686 --bin-compress --enable-languages=c,c++"
           }
         - {
             name: "i686 win32 dwarf",
-            artifact: "i686-${{ github.ref_name }}-release-win32-dwarf-rt_v9-rev0.7z",
-            build_cmd: "--mode=gcc-${{ github.ref_name }} --buildroot=buildroot --jobs=4 --rev=0 --rt-version=v9 --threads=win32 --exceptions=dwarf --arch=i686 --bin-compress --enable-languages=c,c++"
+            artifact: "i686-${{ needs.split-tag.outputs.gcc-version }}-release-win32-dwarf-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z",
+            build_cmd: "--mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=v9 --threads=win32 --exceptions=dwarf --arch=i686 --bin-compress --enable-languages=c,c++"
           }
 
     steps:
@@ -73,7 +85,6 @@ jobs:
         name: ${{ matrix.config.artifact }}
 
   release:
-    if: contains(github.ref, 'tags/')
     runs-on: ubuntu-latest
     needs: build
 
@@ -108,38 +119,38 @@ jobs:
         config:
         - {
             name: "x86_64 posix sjlj",
-            artifact: "x86_64-${{ github.ref_name }}-release-posix-sjlj-rt_v9-rev0.7z"
+            artifact: "x86_64-${{ needs.split-tag.outputs.gcc-version }}-release-posix-sjlj-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z"
           }
         - {
             name: "x86_64 posix seh",
-            artifact: "x86_64-${{ github.ref_name }}-release-posix-seh-rt_v9-rev0.7z"
+            artifact: "x86_64-${{ needs.split-tag.outputs.gcc-version }}-release-posix-seh-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z"
           }
         - {
             name: "x86_64 win32 sjlj",
-            artifact: "x86_64-${{ github.ref_name }}-release-win32-sjlj-rt_v9-rev0.7z"
+            artifact: "x86_64-${{ needs.split-tag.outputs.gcc-version }}-release-win32-sjlj-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z"
           }
         - {
             name: "x86_64 win32 seh",
-            artifact: "x86_64-${{ github.ref_name }}-release-win32-seh-rt_v9-rev0.7z"
+            artifact: "x86_64-${{ needs.split-tag.outputs.gcc-version }}-release-win32-seh-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z"
           }
         - {
             name: "i686 posix sjlj",
-            artifact: "i686-${{ github.ref_name }}-release-posix-sjlj-rt_v9-rev0.7z"
+            artifact: "i686-${{ needs.split-tag.outputs.gcc-version }}-release-posix-sjlj-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z"
           }
         - {
             name: "i686 posix dwarf",
-            artifact: "i686-${{ github.ref_name }}-release-posix-dwarf-rt_v9-rev0.7z"
+            artifact: "i686-${{ needs.split-tag.outputs.gcc-version }}-release-posix-dwarf-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z"
           }
         - {
             name: "i686 win32 sjlj",
-            artifact: "i686-${{ github.ref_name }}-release-win32-sjlj-rt_v9-rev0.7z"
+            artifact: "i686-${{ needs.split-tag.outputs.gcc-version }}-release-win32-sjlj-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z"
           }
         - {
             name: "i686 win32 dwarf",
-            artifact: "i686-${{ github.ref_name }}-release-win32-dwarf-rt_v9-rev0.7z"
+            artifact: "i686-${{ needs.split-tag.outputs.gcc-version }}-release-win32-dwarf-rt_v9-rev${{ needs.split-tag.outputs.mingw-rev }}.7z"
           }
 
-    needs: release
+    needs: [release,split-tag]
 
     steps:
     - name: Download artifact
