--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,29 +47,20 @@ jobs:
       run: ./build --mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=v9 --threads=${{ matrix.threads }} --exceptions=${{ matrix.exceptions }} --arch=${{ matrix.arch }} --bin-compress --enable-languages=c,c++
 
     - name: Upload
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v2
       with:
-        path: ./buildroot/archives/*
+        name: 'archives'
+        path: ./buildroot/archives/
 
   release:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1.0.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-
     - name: Download artifact
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v2
       with:
+        name: 'archives'
         path: ./
 
     - name: Upload to Release
