--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,19 +3,22 @@ name: x86_64 and i686 release builds
 on:
   push:
     tags:
-      - "v*-rev*"
+      - "*-rt_*-rev*"
 
 jobs:
   split-tag:
     runs-on: ubuntu-latest
     outputs:
       gcc-version: ${{ steps.get-gcc-version.outputs.version }}
+      rt-version: ${{ steps.get-rt-version.outputs.version }}
       mingw-rev: ${{ steps.get-mingw-revision.outputs.rev }}
     steps:
       - id: get-gcc-version
-        run: echo "::set-output name=version::$(echo ${{ github.ref_name }} | cut -d- -f1 | cut -c2-)"
+        run: echo "::set-output name=version::$(echo ${{ github.ref_name }} | cut -d- -f1)"
+      - id: get-rt-version
+        run: echo "::set-output name=version::$(echo ${{ github.ref_name }} | cut -d- -f2 | cut -c4-)"
       - id: get-mingw-revision
-        run: echo "::set-output name=rev::$(echo ${{ github.ref_name }} | cut -d- -f2 | cut -c4-)"
+        run: echo "::set-output name=rev::$(echo ${{ github.ref_name }} | cut -d- -f3 | cut -c4-)"
 
   build:
     needs: split-tag
@@ -44,7 +47,7 @@ jobs:
 
     - name: Build
       shell: msys2 {0}
-      run: ./build --mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=v9 --threads=${{ matrix.threads }} --exceptions=${{ matrix.exceptions }} --arch=${{ matrix.arch }} --bin-compress --enable-languages=c,c++
+      run: ./build --mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=${{ needs.split-tag.outputs.rt-version }} --threads=${{ matrix.threads }} --exceptions=${{ matrix.exceptions }} --arch=${{ matrix.arch }} --bin-compress --enable-languages=c,c++
 
     - name: Upload
       uses: actions/upload-artifact@v2
