--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,13 +47,13 @@ jobs:
 
     - name: Build
       shell: msys2 {0}
-      run: ./build --mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=${{ needs.split-tag.outputs.rt-version }} --threads=${{ matrix.threads }} --exceptions=${{ matrix.exceptions }} --arch=${{ matrix.arch }} --bin-compress --enable-languages=c,c++,fortran
+      run: ./build --mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=/c/buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=${{ needs.split-tag.outputs.rt-version }} --threads=${{ matrix.threads }} --exceptions=${{ matrix.exceptions }} --arch=${{ matrix.arch }} --bin-compress --enable-languages=c,c++,fortran
 
     - name: Upload
       uses: actions/upload-artifact@v2
       with:
         name: 'archives'
-        path: ./buildroot/archives/
+        path: c:/buildroot/archives/
 
   release:
     runs-on: ubuntu-latest
