--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
         arch: [x86_64, i686]
         threads: [posix, win32]
         exceptions: [seh, dwarf]
+        msvcrt: [msvcrt, ucrt]
         exclude:
           - arch: x86_64
             exceptions: dwarf
@@ -47,7 +48,18 @@ jobs:
 
     - name: Build
       shell: msys2 {0}
-      run: ./build --mode=gcc-${{ needs.split-tag.outputs.gcc-version }} --buildroot=/c/buildroot --jobs=4 --rev=${{ needs.split-tag.outputs.mingw-rev }} --rt-version=${{ needs.split-tag.outputs.rt-version }} --threads=${{ matrix.threads }} --exceptions=${{ matrix.exceptions }} --arch=${{ matrix.arch }} --bin-compress --enable-languages=c,c++,fortran
+      run: ./build \
+        --mode=gcc-${{ needs.split-tag.outputs.gcc-version }} \
+        --buildroot=/c/buildroot \
+        --jobs=4 \
+        --rev=${{ needs.split-tag.outputs.mingw-rev }} \
+        --with-default-msvcrt=${{ matrix.msvcrt }} \
+        --rt-version=${{ needs.split-tag.outputs.rt-version }} \
+        --threads=${{ matrix.threads }} \
+        --exceptions=${{ matrix.exceptions }} \
+        --arch=${{ matrix.arch }} \
+        --bin-compress \
+        --enable-languages=c,c++,fortran
 
     - name: Upload
       uses: actions/upload-artifact@v3
