--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,17 +48,18 @@ jobs:
 
     - name: Build
       shell: msys2 {0}
-      run: ./build \
-        --mode=gcc-${{ needs.split-tag.outputs.gcc-version }} \
-        --buildroot=/c/buildroot \
-        --jobs=4 \
-        --rev=${{ needs.split-tag.outputs.mingw-rev }} \
-        --with-default-msvcrt=${{ matrix.msvcrt }} \
-        --rt-version=${{ needs.split-tag.outputs.rt-version }} \
-        --threads=${{ matrix.threads }} \
-        --exceptions=${{ matrix.exceptions }} \
-        --arch=${{ matrix.arch }} \
-        --bin-compress \
+      run: >-
+        ./build
+        --mode=gcc-${{ needs.split-tag.outputs.gcc-version }}
+        --buildroot=/c/buildroot
+        --jobs=4
+        --rev=${{ needs.split-tag.outputs.mingw-rev }}
+        --with-default-msvcrt=${{ matrix.msvcrt }}
+        --rt-version=${{ needs.split-tag.outputs.rt-version }}
+        --threads=${{ matrix.threads }}
+        --exceptions=${{ matrix.exceptions }}
+        --arch=${{ matrix.arch }}
+        --bin-compress
         --enable-languages=c,c++,fortran
 
     - name: Upload
