--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
     - name: Upload
       uses: actions/upload-artifact@v4
       with:
-        name: 'archives'
+        name: ${{ matrix.arch }}-${{ matrix.threads }}-${{ matrix.exceptions }}-${{ matrix.msvcrt }}
         path: c:/buildroot/archives/
 
   release:
@@ -78,8 +78,8 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v4
       with:
-        name: 'archives'
         path: ./
+        merge-multiple: true
 
     - name: Upload to Release
       id: upload_to_release
